# auto_analyze

./: .env  .gitignore  Data Analysis  Dockerfile  LICENSE  Pipfile  README.md  SWEETVIZ_REPORT.html  gpt_analysis.html  main.py  main_docker.py  markdown_to_docx.py  mito-starter-notebook.ipynb  prompts.py  pyproject.toml  requirements.txt  shap_plot.html  sorted_shap_plot.html
.github/workflows/: master_autoanalyze.yml
.jit/: jit-plan.yml
.streamlit/: config.toml  secrets.toml
cache/: cache_db_0.11.db  cache_db_0.11.db.wal
data/: breastcancernew.csv  missing_data.csv
explanations/: explanations.py  prompts.py
