[tool.poetry]
name = "auto-analyze"
version = "0.1.0"
description = ""
authors = ["DrDavidL <92898146+DrDavidL@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
numpy = "<=1.26"
pandas = "^2.2.2"
ydata-profiling = "^4.8.3"
streamlit = "^1.34.0"
plotly = "^5.22.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.4.2"
langchain = "^0.1.20"
langchain-experimental = "^0.0.58"
beautifulsoup4 = "^4.12.3"
pillow = "^10.3.0"
lifelines = "^0.28.0"
openai = "^1.28.1"
tableone = "^0.8.0"
streamlit-chat = "^0.1.1"
category-encoders = "^2.6.3"
shap = "^0.45.1"
missingno = "^0.5.2"
imbalanced-learn = "^0.12.2"
visualimiss = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
